Fix page overflow bug on collection header

--- a/src/styles/6.components/template/collection/collection-header.scss
+++ b/src/styles/6.components/template/collection/collection-header.scss
@@ -42,6 +42,7 @@
 
   &__usps {
     display: flex;
+    width: calc(100% - 30px);
   }
 
   &__usp {
@@ -89,7 +90,6 @@
 
     &__usps {
       justify-content: space-evenly;
-      width: 100%;
     }
 
     &__usp {
